--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background:url(/assets/Gemini_Generated_Image_dyxd0tdyxd0tdyxd.png); */
+    background:url(/assets/Gemini_Generated_Image_dyxd0tdyxd0tdyxd.png);
     background-size: cover;
     background-repeat: no-repeat ;
     background-position: center;
